# OMTeam_AI

./: Dockerfile  README.md  agent_system.py  example_usage.py  main.py  planning document.md  pyproject.toml
app/api/: schemas.py  services.py
app/api/endpoints/: chat.py  daily_analysis.py  daily_missions.py  weekly_analysis.py
app/api_clients/: __init__.py  app_server_client.py
tests/: test_routing.py
