[project]
name = "omteam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.1",
    "langchain-core>=1.2.6",
    "langchain-upstage>=0.7.5",
    "langfuse>=3.11.2",
    "langgraph>=1.0.5",
    "langgraph-cli>=0.4.11",
    "openai>=2.14.0",
    "opentelemetry-instrumentation-anthropic>=0.50.1",
    "python-dotenv>=1.2.1",
]
